# libzidx

./: .gitignore  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  Doxyfile  FILE_FORMAT.md  LICENSE  Makefile  README.md  configure.ac  travis-install.sh
src/: Makefile.am  gzidx.c  gzidx.h  zidx.c  zidx.h  zidx_stream.c  zidx_stream.h  zidx_streamlike.c  zidx_streamlike.h  zidx_streamlike.hpp  zidx_streamlikexx.cpp
src/tests/: Makefile  test_read.c  test_stream.c
tests/: .ycm_extra_conf.py  Makefile.am  check_libzidx.c  check_stream_api.c  utils.c  utils.h
